--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,8 @@
 browser=chrome
 url=https://qa3.vytrack.com
-qa1_env=https://qa1.vytrack.com
-salesmanager_username=salesmanager85
-salesmanager_password=UserUser123
-browser=safari
+driver_username=user1
+driver_password=UserUser123
+salesManager_username=salesmanager85
+salesManager_word=UserUser123
+storemanager_username=storemanager85
+storemanager_password=UserUser123
