--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,20 @@
             <version>4.0.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+<!-- Apache poi used for excel with xls extension  -->
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.1</version>
+        </dependency>
 
-
-
+<!--  Apache poi-ooxml used for excel with xlsx extension-->
 
 
 
